2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Fix make check.
	
	* demos/gtk-demo/example_stockbrowser.cc: Adapt for the previous commit
	that changed IconSet to need RefPtr.

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	IconSet: Use this via a RefPtr.

	* gtk/src/iconset.[h|cc]: Use this via RefPtr, because that is what the 
	C API expects, though this is not a GObject.
	* gtk/gtkmm/stock.[h|cc]:
	* gtk/src/iconfactory.hg:
	* gtk/src/image.[hg|ccg]:
	* gtk/src/stylecontext.hg:
	* tools/m4/convert_gtk.m4: Adapt.

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Widget: Add some methods.

	* gtk/src/widget.hg: Added set_state_flags(), get_state_flags(), 
	reset_state_flags(), set_device_enable(), get_device_enabled(), and 
	reset_style().

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Widget: Simplify the get_request_mode vfunc wrapping.

	* gtk/src/widget.[hg|ccg]: Use a simple _WRAP_VFUNC() now that the C code 
	behaves properly. See https://bugzilla.gnome.org/show_bug.cgi?id=639073#c17

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Wrapped some new GTK+ functions, removing some too.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/cellarea.hg: Remove set_style_detail() and get_style_detail().
	* gtk/src/cellrenderer.hg: Added get_state().
	* gtk/src/textview.hg: Added get_cursor_locations().
	
2011-01-27  Krzesimir Nowak  <qdlacz@gmail.com>

	Fixed compilation errors introduced in previous changes.

	* gdk/src/types.ccg:
	* gdk/src/types.hg: Added traits for Glib::ustring GdkAtoms.
	* gdk/src/display.ccg:
	* gdk/src/window.ccg: Use new traits.
	* gtk/src/textbuffer.ccg: Ditto. And remove the bogus word.

2011-01-27  Krzesimir Nowak  <qdlacz@gmail.com>

	Adapted Gdk and Gtk to vectorutils.

	* gdk/gdkmm/list.h: Deleted.
	* gdk/gdkmm/filelist.am: Removed list.h from build.
	* gdk/src/color.hg:
	* gdk/src/device.ccg:
	* gdk/src/device.hg:
	* gdk/src/devicemanager.ccg:
	* gdk/src/devicemanager.hg: