@@ -24,6 +24,7 @@ _PINCLUDE(gtkmm/private/window_p.h)
 namespace Gtk
 {
 
+//TODO: Documentation
 class Plug : public Window
 {
   _CLASS_GTKOBJECT(Plug, GtkPlug, GTK_PLUG, Gtk::Window, GtkWindow)
