@@ -1,3 +1,13 @@
+2011-01-30  Murray Cumming  <murrayc@murrayc.com>
+
+	Fix the build with the latest GTK+ from git master.
+	 
+	* tools/extra_defs_gen/generate_defs_gtk.cc: Include gtkx.h and put ifdefs 
+	around the use of GTK_TYPE_PLUG and GTK_TYPE_SOCKET.
+	* gtk/src/plug.ccg:
+	* gtk/src/socket.ccg: Include the new gtkx.h header, because the 
+	declaration have moved.
+
 2011-01-28  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix make check.
